--- a/road-map-for-today-1.html
+++ b/road-map-for-today-1.html
@@ -43,9 +43,9 @@
     }
   </style>
 <link rel="stylesheet" href="style.css">
-<meta name="description" content='Lecture  Causality  A Clear Theoretical Framework  Modernisation Theory  Critique &amp; Competing Approaches  Break  Worksheet    document.addEventListener("DOMContentLoaded", function () {   const...'>
-<meta property="og:description" content='Lecture  Causality  A Clear Theoretical Framework  Modernisation Theory  Critique &amp; Competing Approaches  Break  Worksheet    document.addEventListener("DOMContentLoaded", function () {   const...'>
-<meta name="twitter:description" content='Lecture  Causality  A Clear Theoretical Framework  Modernisation Theory  Critique &amp; Competing Approaches  Break  Worksheet    document.addEventListener("DOMContentLoaded", function () {   const...'>
+<meta name="description" content="Lecture  Causality  A Clear Theoretical Framework  Modernisation Theory  Critique &amp; Competing Approaches  Break  Worksheet    Learning Outcomes After this week, students should be able to: Explain...">
+<meta property="og:description" content="Lecture  Causality  A Clear Theoretical Framework  Modernisation Theory  Critique &amp; Competing Approaches  Break  Worksheet    Learning Outcomes After this week, students should be able to: Explain...">
+<meta name="twitter:description" content="Lecture  Causality  A Clear Theoretical Framework  Modernisation Theory  Critique &amp; Competing Approaches  Break  Worksheet    Learning Outcomes After this week, students should be able to: Explain...">
 </head>
 <body data-spy="scroll" data-target="#toc">
 
@@ -183,6 +183,21 @@ Worksheet
 </td>
 </tr>
 </tbody></table></div>
+<div style="height:2em;">
+
+</div>
+<div id="learning-outcomes-1" class="section level2 unnumbered">
+<h2>Learning Outcomes<a class="anchor" aria-label="anchor" href="#learning-outcomes-1"><i class="fas fa-link"></i></a>
+</h2>
+<p>After this week, students should be able to:</p>
+<ul>
+<li>Explain the role of theories in empirical political science research</li>
+<li>Describe and critique the propositions of modernisation theory</li>
+<li>Discuss the principles of statistical inference</li>
+<li>Understand and apply linear regression (Ordinary Least Squares)</li>
+<li>Appraise model fir in linear regression models</li>
+</ul>
+</div>
 </div>
 <script>
   document.addEventListener("DOMContentLoaded", function () {
@@ -206,7 +221,10 @@ Worksheet
 <div class="next"><a href="principles-of-statistical-inference.html">Principles of Statistical Inference</a></div>
 </div></main><div class="col-md-3 col-lg-2 d-none d-md-block sidebar sidebar-chapter">
     <nav id="toc" data-toggle="toc" aria-label="On this page"><h2>On this page</h2>
-      <ul class="nav navbar-nav"><li><a class="nav-link" href="#road-map-for-today-1">Road Map for Today</a></li></ul>
+      <ul class="nav navbar-nav">
+<li><a class="nav-link" href="#road-map-for-today-1">Road Map for Today</a></li>
+<li><a class="nav-link" href="#learning-outcomes-1">Learning Outcomes</a></li>
+</ul>
 
       <div class="book-extra">
         <ul class="list-unstyled">
