--- a/road-map-for-today-2.html
+++ b/road-map-for-today-2.html
@@ -43,9 +43,9 @@
     }
   </style>
 <link rel="stylesheet" href="style.css">
-<meta name="description" content='Lecture  Assessment &amp; Research Design  Formative Essay  Democracy  Break  Worksheet    document.addEventListener("DOMContentLoaded", function () {   const buttons =...'>
-<meta property="og:description" content='Lecture  Assessment &amp; Research Design  Formative Essay  Democracy  Break  Worksheet    document.addEventListener("DOMContentLoaded", function () {   const buttons =...'>
-<meta name="twitter:description" content='Lecture  Assessment &amp; Research Design  Formative Essay  Democracy  Break  Worksheet    document.addEventListener("DOMContentLoaded", function () {   const buttons =...'>
+<meta name="description" content="Lecture  Assessment &amp; Research Design  Formative Essay  Democracy  Break  Worksheet    Learning Outcomes After this week, students should be able to: Apply the tasks of conceptualisation and...">
+<meta property="og:description" content="Lecture  Assessment &amp; Research Design  Formative Essay  Democracy  Break  Worksheet    Learning Outcomes After this week, students should be able to: Apply the tasks of conceptualisation and...">
+<meta name="twitter:description" content="Lecture  Assessment &amp; Research Design  Formative Essay  Democracy  Break  Worksheet    Learning Outcomes After this week, students should be able to: Apply the tasks of conceptualisation and...">
 </head>
 <body data-spy="scroll" data-target="#toc">
 
@@ -178,6 +178,22 @@ Worksheet
 </td>
 </tr>
 </tbody></table></div>
+<div style="height:2em;">
+
+</div>
+<div id="learning-outcomes-2" class="section level2 unnumbered">
+<h2>Learning Outcomes<a class="anchor" aria-label="anchor" href="#learning-outcomes-2"><i class="fas fa-link"></i></a>
+</h2>
+<p>After this week, students should be able to:</p>
+<ul>
+<li>Apply the tasks of conceptualisation and measurement</li>
+<li>Evaluate different conceptualisations and measurements of democracy</li>
+<li>Understand and apply binary response models (probit) in the context of cross-sectional data</li>
+<li>Interpret the results of binary response models</li>
+<li>Design results tables with the R package <code>modelsummary</code>
+</li>
+</ul>
+</div>
 </div>
 <script>
   document.addEventListener("DOMContentLoaded", function () {
@@ -201,7 +217,10 @@ Worksheet
 <div class="next"><a href="probit---theory.html">Probit - Theory</a></div>
 </div></main><div class="col-md-3 col-lg-2 d-none d-md-block sidebar sidebar-chapter">
     <nav id="toc" data-toggle="toc" aria-label="On this page"><h2>On this page</h2>
-      <ul class="nav navbar-nav"><li><a class="nav-link" href="#road-map-for-today-2">Road Map for Today</a></li></ul>
+      <ul class="nav navbar-nav">
+<li><a class="nav-link" href="#road-map-for-today-2">Road Map for Today</a></li>
+<li><a class="nav-link" href="#learning-outcomes-2">Learning Outcomes</a></li>
+</ul>
 
       <div class="book-extra">
         <ul class="list-unstyled">
