--- a/road-map-for-today-3.html
+++ b/road-map-for-today-3.html
@@ -43,9 +43,9 @@
     }
   </style>
 <link rel="stylesheet" href="style.css">
-<meta name="description" content='Lecture  Why this again?  Missing Data  Conceptualisation of Socio-Economic Development  Break  Presentations    document.addEventListener("DOMContentLoaded", function () {   const buttons =...'>
-<meta property="og:description" content='Lecture  Why this again?  Missing Data  Conceptualisation of Socio-Economic Development  Break  Presentations    document.addEventListener("DOMContentLoaded", function () {   const buttons =...'>
-<meta name="twitter:description" content='Lecture  Why this again?  Missing Data  Conceptualisation of Socio-Economic Development  Break  Presentations    document.addEventListener("DOMContentLoaded", function () {   const buttons =...'>
+<meta name="description" content="Lecture  Why this again?  Missing Data  Conceptualisation of Socio-Economic Development  Break  Presentations    Learning Outcomes After this week, students should be able to: Critically assess...">
+<meta property="og:description" content="Lecture  Why this again?  Missing Data  Conceptualisation of Socio-Economic Development  Break  Presentations    Learning Outcomes After this week, students should be able to: Critically assess...">
+<meta name="twitter:description" content="Lecture  Why this again?  Missing Data  Conceptualisation of Socio-Economic Development  Break  Presentations    Learning Outcomes After this week, students should be able to: Critically assess...">
 </head>
 <body data-spy="scroll" data-target="#toc">
 
@@ -178,6 +178,20 @@ Presentations
 </td>
 </tr>
 </tbody></table></div>
+<div style="height:2em;">
+
+</div>
+<div id="learning-outcomes-3" class="section level2 unnumbered">
+<h2>Learning Outcomes<a class="anchor" aria-label="anchor" href="#learning-outcomes-3"><i class="fas fa-link"></i></a>
+</h2>
+<p>After this week, students should be able to:</p>
+<ul>
+<li>Critically assess the conceptualisation and measurement of socio-economic development in the context of modernisation theory</li>
+<li>Understand the implications of missing data</li>
+<li>Apply strategies to deal with missing data</li>
+<li>Apply different strategies in statistical modelling</li>
+</ul>
+</div>
 </div>
 <script>
   document.addEventListener("DOMContentLoaded", function () {
@@ -201,7 +215,10 @@ Presentations
 <div class="next"><a href="missing-data.html">Missing Data</a></div>
 </div></main><div class="col-md-3 col-lg-2 d-none d-md-block sidebar sidebar-chapter">
     <nav id="toc" data-toggle="toc" aria-label="On this page"><h2>On this page</h2>
-      <ul class="nav navbar-nav"><li><a class="nav-link" href="#road-map-for-today-3">Road Map for Today</a></li></ul>
+      <ul class="nav navbar-nav">
+<li><a class="nav-link" href="#road-map-for-today-3">Road Map for Today</a></li>
+<li><a class="nav-link" href="#learning-outcomes-3">Learning Outcomes</a></li>
+</ul>
 
       <div class="book-extra">
         <ul class="list-unstyled">
