--- a/road-map-for-today-4.html
+++ b/road-map-for-today-4.html
@@ -43,9 +43,9 @@
     }
   </style>
 <link rel="stylesheet" href="style.css">
-<meta name="description" content='Lecture  The Role of Culture in Democratisation  Break  Worksheet    document.addEventListener("DOMContentLoaded", function () {   const buttons = document.querySelectorAll(".delayed-download");  ...'>
-<meta property="og:description" content='Lecture  The Role of Culture in Democratisation  Break  Worksheet    document.addEventListener("DOMContentLoaded", function () {   const buttons = document.querySelectorAll(".delayed-download");  ...'>
-<meta name="twitter:description" content='Lecture  The Role of Culture in Democratisation  Break  Worksheet    document.addEventListener("DOMContentLoaded", function () {   const buttons = document.querySelectorAll(".delayed-download");  ...'>
+<meta name="description" content="Lecture  The Role of Culture in Democratisation  Break  Worksheet    Learning Outcomes After this week, students should be able to: Explain and critically assess the role of political culture in...">
+<meta property="og:description" content="Lecture  The Role of Culture in Democratisation  Break  Worksheet    Learning Outcomes After this week, students should be able to: Explain and critically assess the role of political culture in...">
+<meta name="twitter:description" content="Lecture  The Role of Culture in Democratisation  Break  Worksheet    Learning Outcomes After this week, students should be able to: Explain and critically assess the role of political culture in...">
 </head>
 <body data-spy="scroll" data-target="#toc">
 
@@ -168,6 +168,18 @@ Worksheet
 </td>
 </tr>
 </tbody></table></div>
+<div style="height:2em;">
+
+</div>
+<div id="learning-outcomes-4" class="section level2 unnumbered">
+<h2>Learning Outcomes<a class="anchor" aria-label="anchor" href="#learning-outcomes-4"><i class="fas fa-link"></i></a>
+</h2>
+<p>After this week, students should be able to:</p>
+<ul>
+<li>Explain and critically assess the role of political culture in democratisation</li>
+<li>Understand the issues in researching the role of culture in democratisation</li>
+</ul>
+</div>
 </div>
 <script>
   document.addEventListener("DOMContentLoaded", function () {
@@ -191,7 +203,10 @@ Worksheet
 <div class="next"><a href="consolidation.html">Consolidation</a></div>
 </div></main><div class="col-md-3 col-lg-2 d-none d-md-block sidebar sidebar-chapter">
     <nav id="toc" data-toggle="toc" aria-label="On this page"><h2>On this page</h2>
-      <ul class="nav navbar-nav"><li><a class="nav-link" href="#road-map-for-today-4">Road Map for Today</a></li></ul>
+      <ul class="nav navbar-nav">
+<li><a class="nav-link" href="#road-map-for-today-4">Road Map for Today</a></li>
+<li><a class="nav-link" href="#learning-outcomes-4">Learning Outcomes</a></li>
+</ul>
 
       <div class="book-extra">
         <ul class="list-unstyled">
