--- a/road-map-for-today-5.html
+++ b/road-map-for-today-5.html
@@ -43,9 +43,9 @@
     }
   </style>
 <link rel="stylesheet" href="style.css">
-<meta name="description" content="The Formative  Lecture  Time Series  Markov Transition Models  Conditional Probabilities  Democratic Emergence  Democratic Survival  Model Fit  Break  Worksheet   ...">
-<meta property="og:description" content="The Formative  Lecture  Time Series  Markov Transition Models  Conditional Probabilities  Democratic Emergence  Democratic Survival  Model Fit  Break  Worksheet   ...">
-<meta name="twitter:description" content="The Formative  Lecture  Time Series  Markov Transition Models  Conditional Probabilities  Democratic Emergence  Democratic Survival  Model Fit  Break  Worksheet   ...">
+<meta name="description" content="The Formative  Lecture  Time Series  Markov Transition Models  Conditional Probabilities  Democratic Emergence  Democratic Survival  Model Fit  Break  Worksheet    Learning Outcomes After this...">
+<meta property="og:description" content="The Formative  Lecture  Time Series  Markov Transition Models  Conditional Probabilities  Democratic Emergence  Democratic Survival  Model Fit  Break  Worksheet    Learning Outcomes After this...">
+<meta name="twitter:description" content="The Formative  Lecture  Time Series  Markov Transition Models  Conditional Probabilities  Democratic Emergence  Democratic Survival  Model Fit  Break  Worksheet    Learning Outcomes After this...">
 </head>
 <body data-spy="scroll" data-target="#toc">
 
@@ -198,6 +198,20 @@ Worksheet
 </td>
 </tr>
 </tbody></table></div>
+<div style="height:2em;">
+
+</div>
+<div id="learning-outcomes-5" class="section level2 unnumbered">
+<h2>Learning Outcomes<a class="anchor" aria-label="anchor" href="#learning-outcomes-5"><i class="fas fa-link"></i></a>
+</h2>
+<p>After this week, students should be able to:</p>
+<ul>
+<li>Understand and apply binary response models in the context of time-series, cross-sectional data (Markov-Transition Models)</li>
+<li>Model the emergence and survival of democracy</li>
+<li>Evaluate model fit for binary response models</li>
+<li>Design custom lines in <code>modelsummary</code> tables</li>
+</ul>
+</div>
 </div>
 <script>
   document.addEventListener("DOMContentLoaded", function () {
@@ -221,7 +235,10 @@ Worksheet
 <div class="next"><a href="markov-transition-models.html">Markov Transition Models</a></div>
 </div></main><div class="col-md-3 col-lg-2 d-none d-md-block sidebar sidebar-chapter">
     <nav id="toc" data-toggle="toc" aria-label="On this page"><h2>On this page</h2>
-      <ul class="nav navbar-nav"><li><a class="nav-link" href="#road-map-for-today-5">Road Map for Today</a></li></ul>
+      <ul class="nav navbar-nav">
+<li><a class="nav-link" href="#road-map-for-today-5">Road Map for Today</a></li>
+<li><a class="nav-link" href="#learning-outcomes-5">Learning Outcomes</a></li>
+</ul>
 
       <div class="book-extra">
         <ul class="list-unstyled">
