--- a/road-map-for-today-6.html
+++ b/road-map-for-today-6.html
@@ -43,9 +43,9 @@
     }
   </style>
 <link rel="stylesheet" href="style.css">
-<meta name="description" content="The Sample Essay  Lecture  Endogenous versus Exogenous Democratisation  Empirical Evidence  Break  Last Week’s Worksheet  Summative Assessment – Group Discussion    ...">
-<meta property="og:description" content="The Sample Essay  Lecture  Endogenous versus Exogenous Democratisation  Empirical Evidence  Break  Last Week’s Worksheet  Summative Assessment – Group Discussion    ...">
-<meta name="twitter:description" content="The Sample Essay  Lecture  Endogenous versus Exogenous Democratisation  Empirical Evidence  Break  Last Week’s Worksheet  Summative Assessment – Group Discussion    ...">
+<meta name="description" content="The Sample Essay  Lecture  Endogenous versus Exogenous Democratisation  Empirical Evidence  Break  Last Week’s Worksheet  Summative Assessment – Group Discussion    Learning Outcomes After this...">
+<meta property="og:description" content="The Sample Essay  Lecture  Endogenous versus Exogenous Democratisation  Empirical Evidence  Break  Last Week’s Worksheet  Summative Assessment – Group Discussion    Learning Outcomes After this...">
+<meta name="twitter:description" content="The Sample Essay  Lecture  Endogenous versus Exogenous Democratisation  Empirical Evidence  Break  Last Week’s Worksheet  Summative Assessment – Group Discussion    Learning Outcomes After this...">
 </head>
 <body data-spy="scroll" data-target="#toc">
 
@@ -183,8 +183,18 @@ Summative Assessment – Group Discussion
 </td>
 </tr>
 </tbody></table></div>
-<div style="height:1em;">
+<div style="height:2em;">
 
+</div>
+<div id="learning-outcomes-6" class="section level2 unnumbered">
+<h2>Learning Outcomes<a class="anchor" aria-label="anchor" href="#learning-outcomes-6"><i class="fas fa-link"></i></a>
+</h2>
+<p>After this week, students should be able to:</p>
+<ul>
+<li>Explain the difference between exogenous and endogenous democratisation</li>
+<li>Evaluate empirical evidence for exogenous and endogenous democratisation</li>
+<li>Apply the stages of a research project to the summative assessment of the module</li>
+</ul>
 </div>
 </div>
 <script>
@@ -209,7 +219,10 @@ Summative Assessment – Group Discussion
 <div class="next"><a href="homework-for-week-9.html">Homework for Week 9</a></div>
 </div></main><div class="col-md-3 col-lg-2 d-none d-md-block sidebar sidebar-chapter">
     <nav id="toc" data-toggle="toc" aria-label="On this page"><h2>On this page</h2>
-      <ul class="nav navbar-nav"><li><a class="nav-link" href="#road-map-for-today-6">Road Map for Today</a></li></ul>
+      <ul class="nav navbar-nav">
+<li><a class="nav-link" href="#road-map-for-today-6">Road Map for Today</a></li>
+<li><a class="nav-link" href="#learning-outcomes-6">Learning Outcomes</a></li>
+</ul>
 
       <div class="book-extra">
         <ul class="list-unstyled">
