--- a/road-map-for-today-7.html
+++ b/road-map-for-today-7.html
@@ -43,9 +43,9 @@
     }
   </style>
 <link rel="stylesheet" href="style.css">
-<meta name="description" content='Lecture  Housekeeping  Autocracies  The Status Quo  Startegies for Survival  What does it matter?  Assessment Guidelines  Break  Your Models    document.addEventListener("DOMContentLoaded",...'>
-<meta property="og:description" content='Lecture  Housekeeping  Autocracies  The Status Quo  Startegies for Survival  What does it matter?  Assessment Guidelines  Break  Your Models    document.addEventListener("DOMContentLoaded",...'>
-<meta name="twitter:description" content='Lecture  Housekeeping  Autocracies  The Status Quo  Startegies for Survival  What does it matter?  Assessment Guidelines  Break  Your Models    document.addEventListener("DOMContentLoaded",...'>
+<meta name="description" content="Lecture  Housekeeping  Autocracies  The Status Quo  Startegies for Survival  What does it matter?  Assessment Guidelines  Break  Your Models    Learning Outcomes After this week, students should...">
+<meta property="og:description" content="Lecture  Housekeeping  Autocracies  The Status Quo  Startegies for Survival  What does it matter?  Assessment Guidelines  Break  Your Models    Learning Outcomes After this week, students should...">
+<meta name="twitter:description" content="Lecture  Housekeeping  Autocracies  The Status Quo  Startegies for Survival  What does it matter?  Assessment Guidelines  Break  Your Models    Learning Outcomes After this week, students should...">
 </head>
 <body data-spy="scroll" data-target="#toc">
 
@@ -193,6 +193,22 @@ Your Models
 </td>
 </tr>
 </tbody></table></div>
+<div style="height:2em;">
+
+</div>
+<div id="learning-outcomes-7" class="section level2 unnumbered">
+<h2>Learning Outcomes<a class="anchor" aria-label="anchor" href="#learning-outcomes-7"><i class="fas fa-link"></i></a>
+</h2>
+<p>After this week, students should be able to:</p>
+<ul>
+<li>Differentiate between types of autocratic regimes</li>
+<li>Distinguish strategies for autocratic survival</li>
+<li>Evaluate the role of political regimes in people’s well-being</li>
+<li>Estimate transitional probabilities</li>
+<li>Present statistical results in a professional manner</li>
+<li>Understand the assessment guidelines for the module</li>
+</ul>
+</div>
 </div>
 <script>
   document.addEventListener("DOMContentLoaded", function () {
@@ -216,7 +232,10 @@ Your Models
 <div class="next"><a href="homework-for-week-10.html">Homework for Week 10</a></div>
 </div></main><div class="col-md-3 col-lg-2 d-none d-md-block sidebar sidebar-chapter">
     <nav id="toc" data-toggle="toc" aria-label="On this page"><h2>On this page</h2>
-      <ul class="nav navbar-nav"><li><a class="nav-link" href="#road-map-for-today-7">Road Map for Today</a></li></ul>
+      <ul class="nav navbar-nav">
+<li><a class="nav-link" href="#road-map-for-today-7">Road Map for Today</a></li>
+<li><a class="nav-link" href="#learning-outcomes-7">Learning Outcomes</a></li>
+</ul>
 
       <div class="book-extra">
         <ul class="list-unstyled">
