--- a/road-map-for-today-8.html
+++ b/road-map-for-today-8.html
@@ -43,9 +43,9 @@
     }
   </style>
 <link rel="stylesheet" href="style.css">
-<meta name="description" content='Democratisation by Region  Break  Your Questions     document.addEventListener("DOMContentLoaded", function () {   const buttons = document.querySelectorAll(".delayed-download");  ...'>
-<meta property="og:description" content='Democratisation by Region  Break  Your Questions     document.addEventListener("DOMContentLoaded", function () {   const buttons = document.querySelectorAll(".delayed-download");  ...'>
-<meta name="twitter:description" content='Democratisation by Region  Break  Your Questions     document.addEventListener("DOMContentLoaded", function () {   const buttons = document.querySelectorAll(".delayed-download");  ...'>
+<meta name="description" content="Democratisation by Region  Break  Your Questions    Learning Outcomes After this week, students should be able to: Understand and evaluate commonly discussed factors which inhibit the...">
+<meta property="og:description" content="Democratisation by Region  Break  Your Questions    Learning Outcomes After this week, students should be able to: Understand and evaluate commonly discussed factors which inhibit the...">
+<meta name="twitter:description" content="Democratisation by Region  Break  Your Questions    Learning Outcomes After this week, students should be able to: Understand and evaluate commonly discussed factors which inhibit the...">
 </head>
 <body data-spy="scroll" data-target="#toc">
 
@@ -163,6 +163,17 @@ Your Questions
 </td>
 </tr>
 </tbody></table></div>
+<div style="height:2em;">
+
+</div>
+<div id="learning-outcomes-8" class="section level2 unnumbered">
+<h2>Learning Outcomes<a class="anchor" aria-label="anchor" href="#learning-outcomes-8"><i class="fas fa-link"></i></a>
+</h2>
+<p>After this week, students should be able to:</p>
+<ul>
+<li>Understand and evaluate commonly discussed factors which inhibit the development-democracy link proposed by modernisation theory in different regions of the world</li>
+</ul>
+</div>
 </div>
 
 
@@ -189,7 +200,10 @@ Your Questions
 <div class="next"><a href="professional-writing-in-political-science.html">Professional Writing in Political Science</a></div>
 </div></main><div class="col-md-3 col-lg-2 d-none d-md-block sidebar sidebar-chapter">
     <nav id="toc" data-toggle="toc" aria-label="On this page"><h2>On this page</h2>
-      <ul class="nav navbar-nav"><li><a class="nav-link" href="#road-map-for-today-8">Road Map for Today</a></li></ul>
+      <ul class="nav navbar-nav">
+<li><a class="nav-link" href="#road-map-for-today-8">Road Map for Today</a></li>
+<li><a class="nav-link" href="#learning-outcomes-8">Learning Outcomes</a></li>
+</ul>
 
       <div class="book-extra">
         <ul class="list-unstyled">
