--- a/road-map-for-today.html
+++ b/road-map-for-today.html
@@ -43,9 +43,9 @@
     }
   </style>
 <link rel="stylesheet" href="style.css">
-<meta name="description" content='Introductions  Module Outline  Assessment  Break  Lecture  What is Comparative Politics?  The Comparative Method  The Stages of a Research Project    document.addEventListener("DOMContentLoaded",...'>
-<meta property="og:description" content='Introductions  Module Outline  Assessment  Break  Lecture  What is Comparative Politics?  The Comparative Method  The Stages of a Research Project    document.addEventListener("DOMContentLoaded",...'>
-<meta name="twitter:description" content='Introductions  Module Outline  Assessment  Break  Lecture  What is Comparative Politics?  The Comparative Method  The Stages of a Research Project    document.addEventListener("DOMContentLoaded",...'>
+<meta name="description" content="Introductions  Module Outline  Assessment  Break  Lecture  What is Comparative Politics?  The Comparative Method  The Stages of a Research Project    Learning Outcomes After this week, students...">
+<meta property="og:description" content="Introductions  Module Outline  Assessment  Break  Lecture  What is Comparative Politics?  The Comparative Method  The Stages of a Research Project    Learning Outcomes After this week, students...">
+<meta name="twitter:description" content="Introductions  Module Outline  Assessment  Break  Lecture  What is Comparative Politics?  The Comparative Method  The Stages of a Research Project    Learning Outcomes After this week, students...">
 </head>
 <body data-spy="scroll" data-target="#toc">
 
@@ -188,6 +188,20 @@ The Stages of a Research Project
 </td>
 </tr>
 </tbody></table></div>
+<div style="height:2em;">
+
+</div>
+<div id="learning-outcomes" class="section level2 unnumbered">
+<h2>Learning Outcomes<a class="anchor" aria-label="anchor" href="#learning-outcomes"><i class="fas fa-link"></i></a>
+</h2>
+<p>After this week, students should be able to:</p>
+<ul>
+<li>Explain the role of comparative politics within political science</li>
+<li>Apply the comparative method</li>
+<li>Describe the stages of a research project</li>
+<li>Perform introductory data management and variable transformation in R</li>
+</ul>
+</div>
 </div>
 <script>
   document.addEventListener("DOMContentLoaded", function () {
@@ -211,7 +225,10 @@ The Stages of a Research Project
 <div class="next"><a href="introduction-to-r.html">Introduction to R</a></div>
 </div></main><div class="col-md-3 col-lg-2 d-none d-md-block sidebar sidebar-chapter">
     <nav id="toc" data-toggle="toc" aria-label="On this page"><h2>On this page</h2>
-      <ul class="nav navbar-nav"><li><a class="nav-link" href="#road-map-for-today">Road Map for Today</a></li></ul>
+      <ul class="nav navbar-nav">
+<li><a class="nav-link" href="#road-map-for-today">Road Map for Today</a></li>
+<li><a class="nav-link" href="#learning-outcomes">Learning Outcomes</a></li>
+</ul>
 
       <div class="book-extra">
         <ul class="list-unstyled">
