--- a/full-glossary.html
+++ b/full-glossary.html
@@ -150,7 +150,7 @@
 <div style="height:1em;">
 
 </div>
-<div class="custom-html-table">
+<div class="glossary-table">
 <div class="inline-table"><table style="width:100%; color: black; margin-left: auto; margin-right: auto;" class="table">
 <caption>
 <span id="tab:glossaryfull">Table 16: </span>Glossary for PO33Q
@@ -847,7 +847,7 @@ The z-score, sometimes also referred to as z-value, expresses in units of standa
 
   <div class="col-12 col-md-6 mt-3">
     <p>"<strong><p><img src="images/Crest_white.png" width="75" style="display:block; margin:auto; margin-bottom:3em;"> PO33Q: Determinants of Democracy – <br> Analysing Emergence, Survival, and Fall</p></strong>" was written by </p>
-<p><strong>Dr Flo Reiche</strong> <br><strong>Department of Politics and International Studies</strong> <br><strong>University of Warwick</strong></p>. It was last built on 13 August, 2025.
+<p><strong>Dr Flo Reiche</strong> <br><strong>Department of Politics and International Studies</strong> <br><strong>University of Warwick</strong></p>. It was last built on 14 August, 2025.
   </div>
 
   <div class="col-12 col-md-6 mt-3">
