--- a/glossary.html
+++ b/glossary.html
@@ -144,7 +144,7 @@
 <h1>Glossary<a class="anchor" aria-label="anchor" href="#glossary"><i class="fas fa-link"></i></a>
 </h1>
 <p> </p>
-<div class="custom-html-table">
+<div class="glossary-table">
 <div class="inline-table"><table style="width:100%; color: black; margin-left: auto; margin-right: auto;" class="table">
 <caption>
 <span id="tab:glossary1">Table 3: </span>Glossary Week 1
@@ -432,7 +432,7 @@ Is equal to the squared standard deviation
 
   <div class="col-12 col-md-6 mt-3">
     <p>"<strong><p><img src="images/Crest_white.png" width="75" style="display:block; margin:auto; margin-bottom:3em;"> PO33Q: Determinants of Democracy – <br> Analysing Emergence, Survival, and Fall</p></strong>" was written by </p>
-<p><strong>Dr Flo Reiche</strong> <br><strong>Department of Politics and International Studies</strong> <br><strong>University of Warwick</strong></p>. It was last built on 13 August, 2025.
+<p><strong>Dr Flo Reiche</strong> <br><strong>Department of Politics and International Studies</strong> <br><strong>University of Warwick</strong></p>. It was last built on 14 August, 2025.
   </div>
 
   <div class="col-12 col-md-6 mt-3">
